# levity

./: .gitignore  ChangeLog.md  LICENSE  README.md  levity.cabal
src/: Levity.hs
src/Levity/: Applicative.hs  Class.hs  Eq.hs  Foldable.hs  Functor.hs  Monoid.hs  Num.hs  Ord.hs  Semigroup.hs  Show.hs  Types.hs
src/Levity/Class/: Applicative.hs  Eq.hs  Foldable.hs  Functor.hs  Monad.hs  Monoid.hs  Num.hs  Ord.hs  Semigroup.hs  Show.hs
src/Levity/Types/: Base.hs  Either.hs  IO.hs  Maybe.hs  ST.hs
