name:                levity
version:             0.1.0.0
synopsis:            levity-polymorphic versions of typeclasses in base
-- description:
homepage:            https://github.com/chessai/levity.git
license:             MIT
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:
category:            Prelude
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Levity
    Levity.Applicative 
    Levity.Eq 
    Levity.Foldable 
    Levity.Functor 
    Levity.Monoid 
    Levity.Num
    Levity.Ord 
    Levity.Semigroup 
    Levity.Show

  build-depends:
      base
    , integer-gmp
    , ghc-prim
  hs-source-dirs:
    src
  default-language:
    Haskell2010

  ghc-options: -Wall
